--- a/biography.html
+++ b/biography.html
@@ -291,14 +291,15 @@
           </div>
         </div>
 
+        
         <div class="block">
           <div class="date left" style="height:300px;">
             <p class="left">2007</p>                                                                         
           </div>
           <div class="dot"></div>
-          <div class="right hide">                                
-            <h1>Appointed to the Board of Umeme</h1><hr>
-            <p>Simba Telecom is awarded best dealer of Nokia phones.</p>
+          <div class="right hide">                   
+            <h1>Appointed to the Board of the Uganda Investment Authority(UIA)</h1><hr>
+            <p>In March 2007, I was appointed as the Chairman Board of Directors, Uganda Investment Authority (UIA). Upon taking on this position UIA made strides in promoting investment opportunities in the country for both local and internationally to become a customer-centric organisation.</p>
               <br>                        
           </div>
         </div>
@@ -308,12 +309,13 @@
             <p class="right">2007</p>                                                                         
           </div>
           <div class="dot"></div>
-          <div class="left hide">                   
-            <h1>Appointed to the Board of the Uganda Investment Authority(UIA)</h1><hr>
-            <p>In March 2007, I was appointed as the Chairman Board of Directors, Uganda Investment Authority (UIA). Upon taking on this position UIA made strides in promoting investment opportunities in the country for both local and internationally to become a customer-centric organisation.</p>
+          <div class="left hide">                                
+            <h1>Appointed to the Board of Umeme</h1><hr>
+            <p>In September 2007, I became the Chairman Board of Directors, Umeme Uganda Limited– the country’s sole electricity distribution company. As part of the turnaround plan to improve Umeme’s operations in the last year’s Umeme has significantly dropped yield losses.</p>
               <br>                        
           </div>
         </div>
+
 
         <div class="block">
           <div class="date left" style="height:300px;">
