--- a/biography.html
+++ b/biography.html
@@ -310,7 +310,7 @@
           <div class="dot"></div>
           <div class="left hide">                                
             <h1>Appointed to the Board of Umeme</h1><hr>
-            <p>Simba Telecom is awarded best dealer of Nokia phones.</p>
+            <p>In September 2007, I became the Chairman Board of Directors, Umeme Uganda Limited– the country’s sole electricity distribution company. As part of the turnaround plan to improve Umeme’s operations in the last year’s Umeme has significantly dropped yield losses.</p>
               <br>                        
           </div>
         </div>      
