--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="banner_content">
    <div class="media row justify-content-center">
      <div class="col-lg-6 d-flex justify-content-center align-items-center text-center">
-       <img class="img text-center img-responsive" style="max-width: 100%; max-height: 400px;" src="assets/img/pb.jpeg" alt="">
+       <img class="img text-center img-responsive" style="max-width: 100%; max-height: 400px;" src="assets/img/pb.png" alt="">
      </div>
      <div class="media-body col-xl-6 col-lg-12 col-md-12 justify-content-center align-items-center text-center">
       <div class="container carousel carousel-fade text-center mb-3">
