--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <div class="row">
           <div class="col-12">
             <div class="section-title">
-              <h2>Recommended Books</h2>
+              <h2>Books I Would Recommend</h2>
             </div>
         
             <!-- <div class="clients-slider swiper-container">
