--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -128,44 +128,39 @@
       <!-- End Our Services Section -->
 
       <!-- ======= Why Us Section ======= -->
-      <section
-        class="why-us section-bg"
-        data-aos="fade-up"
-        date-aos-delay="200"
-      >
+      <section class="why-us" data-aos="fade-up" date-aos-delay="200">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 video-box d-flex flex-wrap align-items-center">
-              <img
-                src="assets/img/PCB Foundation logo.jpg"
-                class="img-fluid"
-                style="width: 100%"
-                alt=""
-              />
-              <!-- <a href="https://www.youtube.com/watch?v=uj-bZtv4uf4" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a> -->
-            </div>
+            <div class="col-md-12">
+              <div class="card border-0">
+                <div class="card-img text-center pb-1">
+                  <img
+                    style="max-width: 80%"
+                    src="assets/img/PCB Foundation logo.jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <p class="card-text text-center">
+                    The “Patrick and Carol Bitature Foundation”, is a non-profit
+                    organization, working towards providing adequate healthcare
+                    and opportunities to disadvantaged youth in communities all
+                    over Uganda for over 10 years.
 
-            <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
-              <div class="icon-box">
-                <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
-                <!-- <h3 class="title text-center"><a href="">The Patrick and Carol Bitature Foundation</a></h3> -->
-                <h5 class="description">
-                  The “Patrick and Carol Bitature Foundation”, is a non-profit
-                  organization, working towards providing adequate healthcare
-                  and opportunities to disadvantaged youth in communities all
-                  over Uganda for over 10 years.
-                </h5>
-                <h5 class="description">
-                  Our flagship programme was Project 500k which is a community
-                  based educational initiative that is equipping 500,000 youth
-                  with knowledge and skills in financial literacy as well as the
-                  attitudes and behaviours associated with successful
-                  entrepreneurship.
-                </h5>
-                <h5 class="description">
-                  Since then, we have grown to support numerous programmes and
-                  causes. Our full list of causes are:
-                </h5>
+                    <br />
+                    <br />
+                    Our flagship programme was Project 500k which is a community
+                    based educational initiative that is equipping 500,000 youth
+                    with knowledge and skills in financial literacy as well as
+                    the attitudes and behaviours associated with successful
+                    entrepreneurship.
+
+                    <br />
+                    <br />
+                    Since then, we have grown to support numerous programmes and
+                    causes. Our full list of causes are:
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -177,7 +172,10 @@
       <section class="service-details">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-4 align-items-stretch" data-aos="fade-up">
+            <div class="col-3">
+              <hr class="w-100 border-dark" />
+            </div>
+            <div class="col-md-10 align-items-stretch" data-aos="fade-up">
               <div class="card">
                 <div class="card-img text-center pb-1">
                   <img
@@ -204,8 +202,11 @@
                 </div>
               </div>
             </div>
+            <div class="col-3">
+              <hr class="w-100 border-dark" />
+            </div>
 
-            <div class="col-md-4" data-aos="fade-up">
+            <div class="col-md-10" data-aos="fade-up">
               <div class="card">
                 <div class="card-img text-center pb-4">
                   <img
@@ -229,8 +230,15 @@
               </div>
             </div>
           </div>
+
           <div class="row justify-content-center">
-            <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="col-3">
+              <hr class="w-100 border-dark" />
+            </div>
+            <div
+              class="col-md-10 d-flex align-items-stretch"
+              data-aos="fade-up"
+            >
               <div class="card">
                 <div class="card-img text-center pb-4">
                   <img
@@ -255,7 +263,14 @@
               </div>
             </div>
 
-            <div class="col-md-4 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="col-3">
+              <hr class="w-100 border-dark" />
+            </div>
+
+            <div
+              class="col-md-10 d-flex align-items-stretch"
+              data-aos="fade-up"
+            >
               <div class="card">
                 <div class="card-img text-center">
                   <img
