--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
                     style="max-width: 100%; max-height: 400px"
                     src="assets/img/pb.png"
                     alt=""
+                    data-aos="fade-right"
+                    data-aos-delay="200"
                   />
                 </div>
                 <div
@@ -551,7 +553,14 @@
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div> -->
 
-          <div class="row" data-aos="fade-right">
+          <div
+            class="row"
+            style="
+              box-shadow: 0 5px 25px 0 rgb(214 215 216 / 60%);
+              background: #fff;
+            "
+            data-aos="fade-right"
+          >
             <div class="col-md-7 pt-4">
               <div class="section-title">
                 <h2>My Personal Story</h2>
@@ -586,7 +595,7 @@
             </div>
           </div>
 
-          <div class="row m-0 p-0 justify-content-center">
+          <div class="row mt-3 pt-1 justify-content-center">
             <div class="col-3">
               <hr class="w-100 m-0 p-0 border-dark" />
             </div>
@@ -672,7 +681,14 @@
             </div>
           </div>
 
-          <div class="row" data-aos="fade-up">
+          <div
+            class="row"
+            style="
+              box-shadow: 0 5px 25px 0 rgb(214 215 216 / 60%);
+              background: #fff;
+            "
+            data-aos="fade-up"
+          >
             <div class="col-md-7 pt-5 order-2 order-md-1">
               <div class="section-title">
                 <h2>Publications</h2>
