--- a/index.html
+++ b/index.html
@@ -864,10 +864,7 @@
               <div class="clients-slider swiper-container">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <a
-                      href="http://www.thesimbagroup.com/portfolio/simba-telecom/"
-                      target="_blank"
-                    >
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/advocate.jpeg"
                         class="d-block w-100"
@@ -877,10 +874,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a
-                      href="http://www.electro-maxx.com/index.html"
-                      target="_blank"
-                    >
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/africanmarket.jpeg"
                         class="d-block w-100"
@@ -890,10 +884,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a
-                      href="http://www.thesimbagroup.com/portfolio/pb/"
-                      target="_blank"
-                    >
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/banker.jpg"
                         class="d-block w-100"
@@ -903,10 +894,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a
-                      href="http://www.thesimbagroup.com/portfolio/patrick-bitature-foundation/"
-                      target="_blank"
-                    >
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/capital.jpeg"
                         class="d-block w-100"
@@ -915,7 +903,7 @@
                     </a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="https://ibandauniversity.ac.ug/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/flashes.jpeg"
                         class="d-block w-100"
@@ -932,10 +920,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a
-                      href="http://www.thesimbagroup.com/portfolio/pb/"
-                      target="_blank"
-                    >
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/idea.jpeg"
                         class="d-block w-100"
@@ -951,10 +936,7 @@
                     />
                   </div>
                   <div class="swiper-slide">
-                    <a
-                      href="http://www.thesimbagroup.com/project-cat/real-estate/"
-                      target="_blank"
-                    >
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/inside_out.jpeg"
                         class="d-block w-100"
@@ -977,7 +959,7 @@
                     />
                   </div>
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/mighty.png"
                         class="d-block w-100"
@@ -987,7 +969,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/more_ideas.jpeg"
                         class="d-block w-100"
@@ -997,7 +979,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/nations.jpg"
                         class="d-block w-100"
@@ -1007,7 +989,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/outwit.jpeg"
                         class="d-block w-100"
@@ -1017,7 +999,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/poverty.jpeg"
                         class="d-block w-100"
@@ -1027,7 +1009,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/prosper.jpg"
                         class="d-block w-100"
@@ -1037,7 +1019,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/secrets.jpeg"
                         class="d-block w-100"
@@ -1047,7 +1029,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/strategic.jpeg"
                         class="d-block w-100"
@@ -1057,7 +1039,7 @@
                   </div>
 
                   <div class="swiper-slide">
-                    <a href="http://www.thesimbagroup.com/" target="_blank">
+                    <a href="#" target="_blank">
                       <img
                         src="assets/img/books/strategist.jpeg"
                         class="d-block w-100"
